@@ -1,3 +1,10 @@
+2003-04-01  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclExecute.c (INST_RETURN):  Bytecompiled [return] failed
+	to reset iPtr->returnCode, causing tests parse-18.17 and parse-18.21
+	to fail strangely.
+	* tests/parse.test (parse-18.21):  Corrected now functioning test.
+
 2003-03-31  Don Porter  <dgp@users.sourceforge.net>
 
 	* tests/parse.test (parse-18.*):  Coverage tests for the new
